# kit-head

./: .gitignore  README.md
kit_head/: CMakeLists.txt
kit_head_description/: package.xml
kit_head_description/launch/: display.launch  openni_axes.launch  rviz.rviz
kit_head_description/model/: kit_head.gazebo.xacro  kit_head.inertia.xacro  kit_head.transmission.xacro  kit_head.urdf.xacro
kit_head_hw/: CMakeLists.txt  kit_head_hw_sim_plugins.xml  package.xml
kit_head_hw/include/kit_head_hw/: default_kit_head_hw_sim.h  kit_head_hw.h  kit_head_hw_sim.h  kit_head_hw_sim_plugin.h
kit_head_hw/src/: default_kit_head_hw_sim.cpp  kit_head_hw.cpp  kit_head_hw_sim_plugin.cpp
ros/kit_head/kit_head/: package.xml
ros/kit_head/kit_head_description/launch/: display.launch  openni_axes.launch
ros/kit_head/kit_head_description/model/: kit_head.gazebo.xacro  kit_head.transmission.xacro  kit_head.urdf.xacro
ros/kit_head/kit_head_description/robot/: kit_head_in_world.urdf.xacro
